--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/default.html.twig
@@ -30,7 +30,7 @@
 
 {% block body %}
     {% if query is null %}
-        <div class="container header">
+        <div class="container-fluid header">
             <div class="row">
                 <h2>{% image '@PelagosAppBundle/Resources/public/images/search-logo.png' %}
                         <img src="{{ asset_url }}">
