Fixed account templates.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountExists.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountExists.html.twig
@@ -1,8 +1,4 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
-
-{% block head %}
-    {{ parent() }}
-{% endblock %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
     <div class="messages error alert alert-danger">
