--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
@@ -1,9 +1,4 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
-
-{%block stylesheets %}
-    {{ parent() }}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-{%endblock stylesheets  %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
     <div class="messages error alert alert-warning">
