--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
@@ -1,12 +1,4 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
-
-{% block head %}
-    {{ parent() }}
-
-    {% javascripts '@PelagosAppBundle/Resources/public/js/Account.js' %}
-        {{ add_js(asset_url) }}
-    {% endjavascripts %}
-{% endblock %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
     <table width="100%" border="0">
@@ -23,7 +15,7 @@
                         <input type="email" size="100" name="emailAddress" id="emailAddress" required>
                         <label style="display:inline;" for="emailAddress" class="error"></label>
                         <p>
-                            <button type="submit">Reset</button>
+                            <button class="btn btn-dark" type="submit">Reset</button>
                         </p>
                     </form>
             </td>
