--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/setPassword.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/setPassword.html.twig
@@ -1,6 +1,6 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
-{% block head %}
+{% block javascripts %}
     {{ parent() }}
 
     {{
@@ -18,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-    <div class="messages status">
+    <div class="messages status alert alert-status">
         <h2 class="element-invisible">Status message</h2>
         Your e-mail address has successfully been verified.
     </div>
