--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/changePassword.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/changePassword.html.twig
@@ -1,6 +1,6 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
-{% block head %}
+{% block javascripts %}
     {{ parent() }}
 
     {{
