Updated templates with Bootstrap alert, or hybrid messsage box (drupal style)

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
@@ -1,7 +1,7 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
-<div class="messages warning">
+<div class="messages warning alert alert-warning">
     <h2 class="element-invisible">Warning message</h2>
     This resource is only available to Data Repository Managers.
 </div>
