--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/linkList.html.twig
@@ -60,7 +60,7 @@
     <div id="dialog-confirm" title="Are you sure?">
     </div>
 {% else %}
-    <div class="messages error">
+    <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
         This feature is only accessible by Data Repository Managers.
     </div>
