--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/submit.html.twig
@@ -1,11 +1,7 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
-
-{% block head %}
-
-{% endblock %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
-<div class="messages status">
+<div class="messages status alert alert-success">
 <h2 class="element-invisible">Status message</h2>
 Thank you for your submission. Please email <a href="mailto:griidc@gomri.org?subject=Submission Form">griidc@gomri.org</a> if you have any questions.
 </div>
