--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSummary/dataset-summary.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSummary/dataset-summary.html.twig
@@ -1,6 +1,6 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 {% block title %}Dataset Summary{% endblock %}
-{% block head %}
+{% block javascripts %}
     {{ parent() }}
     
     {% javascripts
