--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/admin.html.twig
@@ -1,4 +1,4 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 {% block title %}Admin{% endblock %}
 {% block body %}
     {% if is_granted('ROLE_DATA_REPOSITORY_MANAGER') %}
