--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,4 @@
-{% extends "PelagosAppBundle::layout.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block body %}
     Pelagos is a system for maintaining a repository of scientific research data.
