--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/index.html.twig
@@ -18,6 +18,7 @@
     }}
 
     {% stylesheets
+        '@PelagosAppBundle/Resources/public/css/messages.css'
         '@PelagosAppBundle/Resources/public/css/dataset-submission.css'
         '@PelagosAppBundle/Resources/public/css/fileBrowser.css'
         '@PelagosAppBundle/Resources/public/css/dataset-submission-uploader.css'
@@ -92,13 +93,15 @@
             {% include 'PelagosAppBundle:DatasetReview:submission-form.html.twig' %}
         {% endif %}
 {% elseif not (is_granted('ROLE_DATA_REPOSITORY_MANAGER') or is_granted('ROLE_SUBJECT_MATTER_EXPERT')) and is_granted('IS_AUTHENTICATED_FULLY') %}
-    <div class="messages error">
+    <div class="messages error alert alert-warning">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-triangle"></i>
         This page is only accessible by Data Repository Managers.
     </div>
 {% else %}
-    <div class="messages warning">
+    <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Warning message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             Please log in first!
     </div>
     <h1>Please log in first to use this form!</h1>
