--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetSubmission/index.html.twig
@@ -4,7 +4,7 @@
 {% endblock %}
 {% block head %}
     {{ parent() }}
-
+    
     {{
         add_css (
             [
@@ -18,6 +18,7 @@
     }}
 
     {% stylesheets
+        '@PelagosAppBundle/Resources/public/css/messages.css'
         '@PelagosAppBundle/Resources/public/css/fileBrowser.css'
         '@PelagosAppBundle/Resources/public/css/dataset-submission.css'
         '@PelagosAppBundle/Resources/public/css/dataset-submission-uploader.css'
@@ -68,26 +69,30 @@
     {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
 {% else %}
     {% if dataset is null %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             Sorry, the dataset with Unique Dataset Identifier (UDI) {{ udi }} could not be found. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
         </div>
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
     {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_SUBMITTED') %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             The DIF has not yet been approved for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
         </div>
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
     {% elseif dataset.dif.status == constant('Pelagos\\Entity\\DIF::STATUS_UNSUBMITTED') %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             The DIF has not yet been submitted for dataset: {{ udi }}. Please email <a href="mailto:griidc@gomri.org?subject=REG Form">griidc@gomri.org</a> if you have any questions.
         </div>
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
     {% elseif not is_granted('CAN_CREATE', datasetSubmission) and not is_granted('CAN_EDIT', datasetSubmission) %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
                 <h2 class="element-invisible">Status message</h2>
+                <i class="fas fa-exclamation-triangle"></i>
                 Sorry, but you can only create or edit dataset submissions for datasets associated with your research groups.
         </div>
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
@@ -100,33 +105,38 @@
                    )
               )
     %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             The previous Dataset Submission for {{ udi }} is still being processed. Please try again later.
         </div>
         {% include 'PelagosAppBundle:DatasetSubmission:form.html.twig' %}
     {% else %}
         {% for error in xmlStatus.errors %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             {{error}}
         </div>
         {% endfor %}
         {% if xmlStatus.success %}
-        <div class="messages status">
+        <div class="messages status alert alert-success">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-check-circle"></i>
             Successfully imported XML.
         </div>
         {% endif %}
         {% if xmlStatus.success is null and  datasetSubmissionLockStatus == true %}
-        <div class="messages warning">
+        <div class="messages warning alert alert-warning">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-exclamation-triangle"></i>
             Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
             This dataset is locked. Please contact griidc@gomri.org if revisions are required.
         </div>
         {% elseif xmlStatus.success is null %}
-        <div class="messages status">
+        <div class="messages status alert alert-success">
             <h2 class="element-invisible">Status message</h2>
+            <i class="fas fa-check-circle"></i>
             Dataset Identifier <b>'{{ udi }}'</b> was found. The latest version has been loaded.
         </div>
         {% endif %}
