--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
@@ -64,7 +64,7 @@
         <div id="publicationId" style="display:none"></div>
         <div id="datasetId" style="display:none"></div>
     {% else %}
-        <div class="messages error">
+        <div class="messages error alert alert-danger">
             <h2 class="element-invisible">Error message</h2>
             This feature is only accessible by Data Repository Managers.
         </div>
