--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ErrorMessage.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ErrorMessage.html.twig
@@ -1,11 +1,11 @@
-{% extends "PelagosAppBundle:template:UI.html.twig" %}
+{% extends "PelagosAppBundle::layout.ui.html.twig" %}
 
 {% block head %}
     {{ parent() }}
 {% endblock %}
 
 {% block body %}
-    <div class="messages error">
+    <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
         {{errormessage}}. For any additional help please contact <a href=
         "griidc@gomri.org">griidc@gomri.org</a>.
