Font Awesome icons for all alerts and messages.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountCreated.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountCreated.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages status alert alert-success">
         <h2 class="element-invisible">Status message</h2>
+        <i class="fas fa-check-circle"></i>
         You have successfully created a GRIIDC account.
     </div>
     Your user name is: <strong>{{Account.getUserId}}</strong><br>
