--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailFound.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailFound.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages status alert alert-success">
         <h2 class="element-invisible">Status message</h2>
+        <i class="fas fa-check-circle"></i>
         {% if reset == true %}
             The email address you have entered has been located in the GRIIDC system. An email will be sent to this address with additional information on how to reset your the account password.
         {% else %}
