--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/forgotUsername.html.twig
@@ -15,6 +15,7 @@
     {% else %}
         <div class="messages status alert alert-success">
             <h2 class="element-invisible">Success message</h2>
+            <i class="fas fa-check-circle"></i>
             If that email address is found in our system, we will send the associated username
             to the found email address. For any additional help please contact <a href="griidc@gomri.org">griidc@gomri.org</a>.
         </div>
