--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/setPassword.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/setPassword.html.twig
@@ -18,8 +18,9 @@
 {% endblock %}
 
 {% block body %}
-    <div class="messages status alert alert-status">
+    <div class="messages status alert alert-success">
         <h2 class="element-invisible">Status message</h2>
+        <i class="fas fa-check-circle"></i>
         Your e-mail address has successfully been verified.
     </div>
     <form id="passwordForm" method="post" action="{{ path('pelagos_app_ui_account_create') }}?person_token={{ personToken.getTokenText }}">
