--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/access-denied.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 <div class="messages warning alert alert-warning">
     <h2 class="element-invisible">Warning message</h2>
+    <i class="fas fa-exclamation-triangle"></i>
     This resource is only available to Data Repository Managers.
 </div>
 
