--- a/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/PublicationDatasetLink/index.html.twig
@@ -66,6 +66,7 @@
     {% else %}
         <div class="messages error alert alert-danger">
             <h2 class="element-invisible">Error message</h2>
+            <i class="fas fa-exclamation-circle"></i>
             This feature is only accessible by Data Repository Managers.
         </div>
     {% endif %}
