--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/NotLoggedIn.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/NotLoggedIn.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages error alert alert-warning">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-triangle"></i>
         You have to be logged in to perform this action. If you have forgotten your password please visit <a href="{{ path('pelagos_app_ui_account_passwordreset') }}" class="alert-link">password reset</a>. For any additional help please contact <a href=
         "griidc@gomri.org" class="alert-link">griidc@gomri.org</a>.
     </div>
