--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountReset.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/AccountReset.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages status alert alert-success">
         <h2 class="element-invisible">Status message</h2>
+        <i class="fas fa-check-circle"></i>
         You have successfully reset your GRIIDC account password.
     </div>
     <p>
