--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/EmailNotFound.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages error alert alert-warning">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-circle"></i>
         The email address you have entered could not be found in the GRIIDC system. Please contact <a href=
         "griidc@gomri.org" class="alert-link">griidc@gomri.org</a> for additional help.
     </div>
