--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MdApp/upload-complete.html.twig
@@ -38,6 +38,7 @@
     {% if warnings|length > 0 %}
     <div class="messages warning alert alert-warning">
         <h2 class="element-invisible">Warning message</h2>
+        <i class="fas fa-exclamation-triangle"></i>
         <ul>
         {% for warning in warnings %}
             <li>{{ warning }}</li>
@@ -48,6 +49,7 @@
     {% if errors|length > 0 %}
     <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-circle"></i>
         <ul>
         {% for error in errors %}
             <li>{{ error }}</li>
