--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/AlreadyLoggedIn.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/AlreadyLoggedIn.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages warning">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-triangle"></i>
         You are already logged in to the website. Please look at the right corner of your browser, you should find your username. For any additional help please contact
         <a href="griidc@gomri.org">griidc@gomri.org</a>.
     </div>
