--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ErrorMessage.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ErrorMessage.html.twig
@@ -7,6 +7,7 @@
 {% block body %}
     <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-circle"></i>
         {{errormessage}}. For any additional help please contact <a href=
         "griidc@gomri.org">griidc@gomri.org</a>.
     </div>
