--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/ExpiredToken.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/ExpiredToken.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-circle"></i>
         The link you have selected has expired. Please visit <a href="{{ path('pelagos_app_ui_account_default') }}">Account Creation</a> to request a new account.
     </div>
 {% endblock %}
