--- a/src/Pelagos/Bundle/AppBundle/Resources/views/template/InvalidToken.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/template/InvalidToken.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
     <div class="messages error alert alert-danger">
         <h2 class="element-invisible">Error message</h2>
+        <i class="fas fa-exclamation-circle"></i>
         The link you have selected is invalid. The link may have already been used to create an account. If you have forgotten your password please visit <a href="{{ path('pelagos_app_ui_account_passwordreset') }}">password reset</a>. For any additional help please contact <a href=
         "griidc@gomri.org">griidc@gomri.org</a>.
     </div>
