Add qtip for hover for full rg name

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
@@ -112,3 +112,15 @@ h1{
 #search-pagination li{
     display: inline-block;
 }
+
+.tooltiptext {
+    display: none;
+}
+
+.groupName{
+    overflow: hidden;
+    white-space:nowrap;
+    text-overflow:ellipsis;
+    width:150px;
+    display:inline-block;
+}
