--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -26,7 +26,7 @@
                             <label>
                                 <input class="checkbox" type="checkbox" id="{{ group.id }}">
                                     <span class="groupName">{{ group.name }} </span> ({{ group.count }})
-                                    <div class="tooltiptext">
+                                    <div class="tooltiptext" style="display:none">
                                         <p>{{ group.name }}</p>
                                     </div>
                             </label>
