--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/results.html.twig
@@ -24,7 +24,7 @@
                     <li for="{{ group.id }}">
                         <div class="checkbox block" style="margin-top: 0; margin-bottom: 0;">
                             <label>
-                                <input class="checkbox" type="checkbox" id="{{ group.id }}">
+                                <input class="rg-checkbox" type="checkbox" id="{{ group.id }}">
                                     <span class="groupName">{{ group.name }} </span> ({{ group.count }})
                                     <div class="tooltiptext" style="display:none">
                                         <p>{{ group.name }}</p>
