--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Search/form.html.twig
@@ -4,7 +4,9 @@
         <div class="input-group col-md-4">
             <input type="search" id="searchBox" name="query" class="search-query form-control" placeholder="Search..."
                    value = "{{ query|default }}">
-            <input type="hidden" id="pageNo" name="page" value="{{ page | default }}">
+            {% if page is defined and page is not null%}
+                <input type="hidden" id="pageNo" name="page" value="{{ page | default }}">
+            {% endif %}
             <span class="input-group-btn">
                 <button id="searchSubmit" class="btn btn-danger" type="submit">
                     <span class=" glyphicon glyphicon-search"></span>
