Changed error messages rendering.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/Account/PasswordReset.html.twig
@@ -15,7 +15,7 @@
                         <input type="email" size="100" name="emailAddress" id="emailAddress" required>
                         <label style="display:inline;" for="emailAddress" class="error"></label>
                         <p>
-                            <button class="btn btn-dark" type="submit">Reset</button>
+                            <button type="submit">Reset</button>
                         </p>
                     </form>
             </td>
