Changed assets so that they are calling the right path. Also enabled version for cache busting.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/layout.html.twig
@@ -7,12 +7,12 @@
     <link rel="icon" type="image/x-icon" href="{{ asset('/build/images/griidc_fav.png') }}" />
 
     {%block stylesheets %}
-        <link href="{{ asset('/build/common.css') }}" rel="stylesheet" />
+        <link href="{{ asset('build/common.css') }}" rel="stylesheet" />
         <link href="//cdnjs.cloudflare.com/ajax/libs/qtip2/2.2.0/jquery.qtip.min.css" rel="stylesheet" />
     {%endblock stylesheets  %}
 
     {% block javascripts %}
-        <script src="{{ asset('/build/common.js') }}"></script>
+        <script src="{{ asset('build/common.js') }}"></script>
         
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.hoverintent/1.9.0/jquery.hoverIntent.min.js"></script>
 
