Added funding org facet to the front end

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
@@ -121,3 +121,13 @@ h1{
     display:inline-block;
 }
 
+#resgrp-facet{
+    overflow: scroll;
+    height: 250px;
+    position: relative;
+}
+
+#fundorg-facet{
+    overflow: scroll;
+}
+
