Added fields to template and form. Still need to work on display logic.

--- a/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/file-submit.html.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/DatasetReview/file-submit.html.twig
@@ -115,6 +115,31 @@
                         </tr>
                     </table>
                 </fieldset>
+                <fieldset>
+                    <table class="tab-table">
+                        <tr>
+                            <td>
+                                {{ form_label(form.isRemotelyHosted) }}
+                                {{ form_widget(form.isRemotelyHosted, { 'attr': {'class': 'remotelyhosted-checkbox'} }) }}
+                            </td>
+                        </tr>
+                        <tr class="row-remotely-hosted-name">
+                            <td>
+                                {{ form_row(form.remotelyHostedName) }}
+                            </td>
+                        </tr>
+                        <tr class="row-remotely-hosted-description">
+                            <td>
+                                {{ form_row(form.remotelyHostedDescription) }}
+                            </td>
+                        </tr>
+                        <tr class="row-remotely-hosted-function">
+                            <td>
+                                {{ form_row(form.remotelyHostedFunction) }}
+                            </td>
+                        </tr>
+                    </table>
+                </fieldset>
             </div> <!-- tabs-3 -->
 
         </div> <!-- tabs -->
