Added vertical scroll only

--- a/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
+++ b/src/Pelagos/Bundle/AppBundle/Resources/public/css/search.css
@@ -122,12 +122,8 @@ h1{
 }
 
 #resgrp-facet{
-    overflow: scroll;
+    overflow-y: scroll;
     height: 250px;
     position: relative;
-}
-
-#fundorg-facet{
-    overflow: scroll;
 }
 
