--- a/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
+++ b/src/Pelagos/Bundle/AppBundle/Resources/views/MetadataGenerator/MD_Distribution.xml.twig
@@ -157,6 +157,35 @@
                     </gmd:MD_DigitalTransferOptions>
                 </gmd:distributorTransferOptions>
             {% endif %}
+            {% if dataset.datasetSubmission.remotelyHostedName %}
+                <gmd:distributorTransferOptions>
+                    <gmd:MD_DigitalTransferOptions>
+                        <gmd:onLine>
+                            <gmd:CI_OnlineResource>
+                                <gmd:linkage>
+                                    <gmd:URL>{{ dataset.datasetSubmission.url }}</gmd:URL>
+                                </gmd:linkage>
+                                <gmd:protocol>
+                                    <gco:CharacterString>{{ remotelyHostedProtocol  }}</gco:CharacterString>
+                                </gmd:protocol>
+                                <gmd:name>
+                                    {{ dataset.datasetSubmission.remotelyHostedName }}
+                                </gmd:name>
+                                <gmd:description>
+                                    {{ dataset.datasetSubmission.remotelyHostedDescription }}
+                                </gmd:description>
+                                <gmd:function>
+                                    <gmd:CI_OnLineFunctionCode
+                                            codeList="http://www.isotc211.org/2005/resources/Codelist/gmxCodelists.xml#CI_OnLineFunctionCode"
+                                            codeListValue="download" codeSpace="001">
+                                        download
+                                    </gmd:CI_OnLineFunctionCode>
+                                </gmd:function>
+                            </gmd:CI_OnlineResource>
+                        </gmd:onLine>
+                    </gmd:MD_DigitalTransferOptions>
+                </gmd:distributorTransferOptions>
+            {% endif %}
         </gmd:MD_Distributor>
     </gmd:distributor>
 </gmd:MD_Distribution>
